<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBgColor"
    tools:context=".RecomendationPage">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/logo_of_app_1"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="Amogus"
        android:textColor="@color/name_of_app"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:background="@color/asideBgColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/homebtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="35dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/menuhome_btn"
            android:onClick="fromRectoMain"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/home" />

        <ImageButton
            android:id="@+id/likebtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/menulike_btn"
            android:onClick="fromRectoLike"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/recbtn"
            app:layout_constraintStart_toEndOf="@+id/homebtn"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/heart" />

        <ImageButton
            android:id="@+id/recbtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="35dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/menuhome_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/likebtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>
