<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBgColor"
    tools:context=".recpage">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="0dp"
        android:layout_height="700dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/logo_of_app_3"
                android:textColor="@color/black"
                android:textSize="40sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="Why Do We Eat Soup When We have a Cold?"

                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/scroll"
                app:layout_constraintEnd_toEndOf="@id/textView"
                app:layout_constraintStart_toStartOf="@id/imageView5"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="250dp"
                android:layout_height="154dp"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/app_name"
                android:foregroundGravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:srcCompat="@drawable/forrecpage" />

            <TextView
                android:id="@+id/RecPageText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="10dp"

                android:fontFamily="@font/montserrat"
                android:text="text"
                android:textColor="@color/black"
                android:textSize="14sp" />


        </LinearLayout>

    </ScrollView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:background="@color/asideBgColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/homebtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="35dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/menuhome_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/home"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/likebtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/menulike_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/recbtn"
            app:layout_constraintStart_toEndOf="@+id/homebtn"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/heart" />

        <ImageButton
            android:id="@+id/recbtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="35dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/menuhome_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/likebtn" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>