<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:id="@+id/coursePageBg"
    tools:context=".CoursePage">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/coursePageImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/tomatoforpage" />

            <TextView
                android:id="@+id/coursePageTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/coursePageImage" />


            <androidx.cardview.widget.CardView
                android:id="@+id/courseBg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="@id/coursePageTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:fontFamily="@font/montserrat"
                            android:gravity="center"
                            android:text="@string/course_start_date"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="25dp"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/montserrat"
                            android:gravity="center"
                            android:text="@string/course_level"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/coursePageDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/app_name"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/coursePageLevel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/app_name"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                    </LinearLayout>

                </LinearLayout>


            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/coursePageText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/course_desc"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <ImageButton
                android:id="@+id/addToCart"
                android:layout_width="126dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:onClick="addToCart"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/shop"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:background="@color/asideBgColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/homebtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="35dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/menuhome_btn"
            android:onClick="fromCoursePagetoMain"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/home" />

        <ImageButton
            android:id="@+id/likebtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/menulike_btn"
            android:onClick="fromCoursePagetoLikepage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/recbtn"
            app:layout_constraintStart_toEndOf="@+id/homebtn"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/heart" />

        <ImageButton
            android:id="@+id/recbtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="35dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/menuhome_btn"
            android:onClick="fromCoursePagetoRec"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/likebtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>